Création du projet Initialisation des Menus

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+.container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: darkgrey;
+  z-index: 999;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
+}
