--- a/src/Menus.css
+++ b/src/Menus.css
@@ -2,6 +2,8 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    font-family: "Calibri";
+    font-size: 12px;
 }
 
 .menu li {
@@ -18,7 +20,7 @@
 
 .menu li.active > a {
     background-color: #333;
-    color: floralwhite;
+    color: #fcfff0;
 }
 
 .sub-menu {
